<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:id="@+id/linear_layout"
    android:orientation="vertical"
    android:layout_marginTop="25dp"
    tools:context="nazianoorani.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:id="@+id/textViewTitle"
        android:layout_marginTop="41dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:theme="@style/ButtonTheme"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_1"
        android:id="@+id/buttonApp1"
        android:layout_marginTop="45dp" />
    <Button
        android:theme="@style/ButtonTheme"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_2"
        android:id="@+id/buttonApp2" />

    <Button
        android:theme="@style/ButtonTheme"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_3"
        android:id="@+id/buttonApp3" />

    <Button
        android:theme="@style/ButtonTheme"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_4"
        android:id="@+id/buttonApp4" />

    <Button
        android:theme="@style/ButtonTheme"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_5"
        android:id="@+id/buttonApp5" />

    <Button
        android:theme="@style/CapstoneTheme"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_6"
        android:id="@+id/buttonApp6"
        android:layout_centerHorizontal="true" />
</LinearLayout>
